--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,9 +7,11 @@
     <uses-sdk
         android:minSdkVersion="5"
         android:targetSdkVersion="20" />
-    
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,11 +19,12 @@
         android:label="@string/app_name" >
         <activity
             android:name="com.rbennett485.dawnoftheveg.DawnOfTheVeg"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.MONKEY" />
             </intent-filter>
